# Nexsus

./: README.md  create.sh  destroy.sh  ingetion.asl.json  main.py  pyproject.toml  reqierment.txt  retriver.asl.json
.github/workflow/: dev.yml
.github/workflows/: dev_terraform.yml  terraform.yml
cloud_services/: __init__.py  dynamodb.py  eventbridge.py  s3.py
config/: __init__.py  config.py  configuration.py
embedding/: main.py
embedding/client/: __init__.py  client.py
embedding/service/: __init__.py  service.py
embedding_processors/: __init__.py  pageindex.py
helper/: __init__.py  helper.py
lamdas/: lamda_embedding.py  lamda_retriver_api.py  retriver.py
retriver/: main.py
retriver/client/: __init__.py  client.py
retriver/service/: __init__.py  service.py
terraform/: data.tf  iam.tf  main.tf  output.tf  variable.tf  varrriable.tf
terraform/api_getway/: main.tf  variable.tf
terraform/cognito/: main.tf  output.tf
terraform/database/: main.tf  output.tf  variable.tf
terraform/event_bridge/: main.tf
terraform/lambda/: main.tf  output.tf  variable.tf
terraform/monitoring/: main.tf  output.tf  variable.tf
terraform/orcastrator/: main.tf  variable.tf
terraform/sqs/: main.tf  output.tf  variable.tf  varriable.tf
